# Weather-Bot

./: .env.example  .gitignore  AGENTS.md  README.md  STRATEGY.md
backend/: pyproject.toml
backend/analysis/: __init__.py  backtest.py  calibration.py  city_edge_ranking.py  city_onboarding.py  city_promotion_apply.py  city_research_audit.py  city_resolution_promotion_audit.py  city_volatility.py  discovery_candidate_audit.py  event_target_date_repair.py  evidence.py  feature_candidate_audit.py  feature_discovery.py  high_reward_city_hunt.py  high_reward_paper_status.py  high_reward_repair.py  historical_diagnostics.py  historical_validation.py  measurement.py  operational_quarantine.py  strategy_discovery.py  strategy_experiments.py  strategy_hypothesis_audit.py  strategy_repair.py  strategy_shadow.py  weather_city_discovery.py
backend/app/: __init__.py  config.py  main.py
backend/tests/: conftest.py  test_api.py  test_backtest.py  test_city_edge_ranking.py  test_city_onboarding.py  test_city_promotion_apply.py  test_city_research_audit.py  test_city_resolution_promotion_audit.py  test_city_volatility.py  test_collectors.py  test_discovery_candidate_audit.py  test_evidence.py  test_feature_candidate_audit.py  test_feature_discovery.py  test_high_reward_city_hunt.py  test_high_reward_paper_status.py  test_high_reward_repair.py  test_historical_diagnostics.py  test_historical_validation.py  test_live_readiness.py  test_measurement.py  test_paper_execution.py  test_polymarket_client.py  test_polymarket_normalize.py  test_resolution_backfill.py  test_run_once.py  (+9 more)
(+81 files in other folders)
